--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
   </head>
   <body class="page">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="page__wrapper"></div>
   </body>
 </html>
